--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <title>TK Islam Al Azhar 1 Kebayoran Baru</title>
-  <meta name="description" content="Sekolah Dasar (TK) Terbaik di Kebayoran Baru, Jakarta Selatan">
+  <meta name="description" content="TK Islam Al Azhar 1 Kebayoran Baru adalah sekolah dasar unggulan di Bogor yang menawarkan pendidikan berkualitas, program Islami, dan fasilitas modern untuk mendukung pembelajaran siswa">
   <meta name="keywords" content="taman kanak kanak, tk, sekolah terbaik, sekolah pavorit, tk kebayoran baru, sekolah kebayoran baru, al azhar 1, tk islam al azhar, tk islam al azhar 1">
   <link href="assets/img/favicon.png" rel="icon">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
