--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
  <meta name="twitter:creator" content="@najzmitea" />
  <meta name="twitter:url" content="https://tkia1.al-azhar.sch.id/"/>
  <meta name="twitter:title" content="TK Islam Al Azhar 1 Kebayoran Baru" />
- <meta name="twitter:description" content="Sekolah Dasar (TK) Terbaik di Kebayoran Baru, Jakarta Selatan" />
+ <meta name="twitter:description" content="TK Islam Terbaik di Kebayoran Baru, Jakarta Selatan" />
  <meta name="twitter:image" content="assets/img/sdia1_kebayoran_baru_about-3.jpg" />
 <!-- E:tweeter card -->
 <style>
